[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 580.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
text = "Score: 0"

[node name="DistanceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 984.0
margin_bottom = 32.0
text = "Distance: 0m"

[node name="HedgehogLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 984.0
margin_bottom = 50.0
text = "Hedgehogs: 1"

[node name="BreakdownLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 68.0
text = "Breakdown: 1"
